--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -21,6 +21,7 @@ Tristano Ajmone <tajmone@gmail.com>
 :Doxter: pass:q[link:https://https://git.io/doxter/[Doxter^]]
 :lib_verbi: pass:q[link:./lib_verbi.i[`lib_verbi.i`^]]
 :lib_definizioni: pass:q[link:./lib_definizioni.i[`lib_definizioni.i`^]]
+:lib_classi: pass:q[link:./lib_classi.i[`lib_classi.i`^]]
 
 // *****************************************************************************
 // *                                                                           *
@@ -58,8 +59,6 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 
 === Modulo delle definizioni
 
-
-
 * {lib_definizioni}
 
 
@@ -74,9 +73,9 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 50100   |           | restrizioni_non_tradotte | === Restrizioni Verbali da Tradurre
 |===============================================================================
 
+
+
 === Modulo dei verbi
-
-
 
 * {lib_verbi}
 
@@ -93,6 +92,29 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 |  4100   |           | tabella_comandi_affermazioni | [tabella verbi]
 | 50000   |           | todo                         | TODO
 | 50100   |           | verbi_non_tradotti           | === Verbi da Tradurre
+| 51000   |           | todo_checklist               | === Check List
+|===============================================================================
+
+
+
+=== Modulo delle classi
+
+* {lib_classi}
+
+
+[cols="2*>10m,20m,60d",options="header"]
+|===============================================================================
+| weight  | subweight |                              | descrizione
+|  1000   |           | elenco_verbi                 | == Elenco dei Verbi Italiani
+|  2000   |           | comandi_partita              | === Meta Comandi di Partita
+|  2100   |           | tabella_comandi_partita      | [tabella verbi]
+|  3000   |           | comandi_gioco                | === Comandi di Gioco
+|  3100   |           | tabella_comandi_gioco        | [tabella verbi]
+|  4000   |           | comandi_affermazion          | === Comandi di Affermazioni o Domande
+|  4100   |           | tabella_comandi_affermazioni | [tabella verbi]
+| 50000   |           | todo                         | TODO
+| 51000   |      1-33 | todo_checklist               | === Check List Generale
+| 51000   |       666 | todo_checklist               | === Check List Doxter
 |===============================================================================
 
 
