--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.6.3-Alpha, 2018-10-14: Alan 3.0beta6
+v0.6.4-Alpha, 2018-10-15: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -307,4 +307,11 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
 
 
 // end::restrizioni_non_tradotte[]
+// tag::todo_checklist[]
+=== Check List
+
+Lista della spesa per le varie cosucce da fare:
+
+
+// end::todo_checklist[]
 
